# vrift

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/: index.ts
rust/: Cargo.toml
rust/src/: floor.rs  lib.rs  main.rs  run.rs  setup.rs  util.rs
rust/src/snapshots/: vrift__run__10:7:5 SSi:UU:SSt UC CF.snap  vrift__run__2:1:1 TDT:AERB:R2023 2au.snap
src/: floor.rs  main.rs  mouse.rs  run.rs  setup.rs
src/snapshots/: vrift__run__10:7:5 SSi:UU CCDT:PB9:RUSC+RUPC 2au CF-EC.snap  vrift__run__10:7:5 SSi:UU:SSt CCDT:SSDB:RULPC 4au CF UC-EC.snap  vrift__run__10:7:5 TDT:AERB:R2023 2au.snap  vrift__run__2:1:1 SSi:UU:SSt UC CF.snap  vrift__run__4:3:2 TDT:AERB:R2023 2au.snap
