[package]
name = "vrift"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/benjaminjkraft/vrift"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.65"

[dev-dependencies]
insta = "1.31.0"
